# co2logger

./: .gitignore  LICENSE  PRIVACY_CLEANUP.md  README.md  analyze_data.py  analyze_real_co2.py  analyze_temperature.py  auto_co2_monitor.py  broadcast_main.py  debug_devices.py  debug_switchbot.py  demo.py  filter_co2_only.py  main.py  pyproject.toml  real_co2_monitor.py  smart_co2_monitor.py  switchbot_co2_reader.py  target_co2_sensor.py  test_temperature_fix.py  validate_readings.py
co2logger/: __init__.py
co2logger/core/: __init__.py  auto_discovery.py  bluetooth_device.py  oui_detector.py
co2logger/devices/: __init__.py  real_co2_meter.py  switchbot_co2.py
co2logger/exporters/: __init__.py  base.py  console.py  http_sender.py  json_file.py
co2logger/models/: __init__.py  sensor_data.py
tests/core/: test_bluetooth_device.py
tests/devices/: test_switchbot_co2.py
tests/exporters/: test_data_exporters.py
tests/models/: test_sensor_data.py
