[project]
name = "co2logger"
version = "0.1.0"
description = "SwitchBot CO2 sensor Bluetooth data reader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.21.1",
    "aiohttp>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
